--- a/src/styles/BaseLayout.css
+++ b/src/styles/BaseLayout.css
@@ -1,9 +1,10 @@
 /* ________HEADER SECTION_____ */
 
 .headerBar {
-  background-color: RGB(238, 235, 216);
+background-color: RGB(239,196,127);
   width: 100%;
   display: flex;
+  height: 150px;
 }
 .headerLogo {
   display: flex;
@@ -12,6 +13,7 @@
 
 .headerTitle {
   font-size: 3em;
+  color: rgb(34, 3, 3);
   padding: 5% auto% 5% auto;
   align-items: center;
   text-align: center;
@@ -20,12 +22,14 @@
 }
 
 .honeyTreeImageDiv {
-  padding: 5%;
+width: 20%;
+margin-top: 10px;
 }
 
 .honeyTreeImage {
-  height: 5em;
-  width: 5em;
+  height: 100%;
+  width: 100%
+
 }
 
 .headerLink {
@@ -37,7 +41,7 @@
 /*_________FOOTER SECTION_________  */
 .footerBar {
   width: 100%;
-  background-color: RGB(238, 235, 216);
+  background-color: RGB(239,196,127);
   display: flex;
   flex-direction: row;
 }
